# usip

./: README.md
kernel/: Makefile  Makefile.kernel  event.c  init.c  internal.h  log.c  mtab.c  notify_pool.c  storage.c  test.c  usip.h  util.c
lib/: COPYING  Makefile  Makefile.am  Makefile.in  autogen.sh  config.status  configure  configure.ac  libtool  libusip.pc.in
lib/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
lib/include/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  usip.h
lib/src/: Makefile  Makefile.am  Makefile.in  event.c  mtab.c  storage.c  util.c
lib/src/.deps/: event.Plo  mtab.Plo  storage.Plo  util.Plo
test/: .crash.txt.swp  Makefile  test-enospc.c  test-mtab.c  test-notify-1.c  test-notify-2.c  test.c
